.gke/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zpm-registry
  namespace: zpm-registry
spec:
  serviceName: zpm-registry
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: zpm-registry
  template:
    metadata:
      labels:
        app: zpm-registry
    spec:
      volumes:
      - emptyDir: {}
        name: mount-helper
      containers:
      - image: zpm-registry
        name: zpm-registry
        lifecycle:
          postStart:
            exec:
              command:
              - /bin/bash
              - -c
              - |
                sleep 30
                iris session iris < /mount-helper/mount_registry_data
        ports:
        - containerPort: 52773
          name: web
        readinessProbe:
          httpGet:
            path: /csp/sys/UtilHome.csp
            port: 52773
          initialDelaySeconds: 30
          periodSeconds: 30
        livenessProbe:
          httpGet:
            path: /csp/sys/UtilHome.csp
            port: 52773
          periodSeconds: 30
        volumeMounts:
        - mountPath: /opt/zpm/REGISTRY-DATA
          name: zpm-registry-volume
        - mountPath: /opt/isc
          name: zpm-registry-isc
        - mountPath: /mount-helper
          name: mount-helper
  volumeClaimTemplates:
  - metadata:
      name: zpm-registry-volume
      namespace: zpm-registry
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
  - metadata:
      name: zpm-registry-isc
      namespace: zpm-registry
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
