.gke/service.yml
apiVersion: v1
kind: Service
metadata:
  name: zpm-registry
  namespace: zpm-registry
spec:
  type: NodePort
  ports:
    - port: 52773
      targetPort: 52773
  selector:
    app: zpm-registry
