.gke/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: zpm-registry
    external-dns.alpha.kubernetes.io/hostname: pm.openexchange.intersystems.com
    nginx.ingress.kubernetes.io/rewrite-target: /registry/$1
  name: zpm-registry
  namespace: zpm-registry
spec:
  rules:
  - host: pm.openexchange.intersystems.com
    http:
      paths:
      - path: /csp/(.*)
        backend:
          serviceName: zpm-registry
          servicePort: 52773
      - path: /(.*)
        backend:
          serviceName: zpm-registry
          servicePort: 52773
